--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- https://blog.katsubemakito.net/html5/camera1 -->
 <h1>HTML5カメラ</h1>
 
-<video id="camera" width="300" height="200"></video>
+<video id="camera" width="300" height="200" autoplay="1"></video>
 <canvas id="picture" width="300" height="200"></canvas>
 <form>
   <button type="button" id="shutter">シャッター</button>
