--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <!-- https://blog.katsubemakito.net/html5/camera1 -->
-<h1>HTML5カメラ</h1>
+<h1>過去カメラ 0.1920</h1>
 
 <video id="camera" width="300" height="200" autoplay="1"></video>
 <canvas id="picture" width="300" height="200"></canvas>
