--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </head>
 <body>
 <!-- https://blog.katsubemakito.net/html5/camera1 -->
-<h1>過去カメラ 0.1926</h1>
+<h1>過去カメラ 0.1943</h1>
 
-<video id="camera" width="300" height="200" autoplay　playsinline="true"></video>
+<video id="camera" width="300" height="200" autoplay muted playsinline="true"></video>
 <!-- https://qiita.com/ueyamamasashi/items/6515ade6b60b0daa7530 -->
 <canvas id="picture" width="300" height="200"></canvas>
 <form>
