--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <!-- https://blog.katsubemakito.net/html5/camera1 -->
-<h1>Timemachine Camera 0.2046</h1>
+<h1>Timemachine Camera 0.2049</h1>
 
 <!-- https://otiai10.hatenablog.com/entry/2019/11/11/090124 -->
 <video id="camera" width="300" height="200" autoplay muted playsinline="true"></video>
@@ -111,11 +111,11 @@ window.onload = () => {
 				const properties = photo.properties;
 				const key = properties.key;
 				const captured_at = properties.captured_at;
-				
+				const username = properties.username;
 				const img = 'https://images.mapillary.com/' + key + '/thumb-320.jpg';
 				document.getElementById("mapillary").innerHTML = '<img src="' + img + '">';
 				const d =  new Date(captured_at);
-				document.getElementById("captured_at").innerText ="Captured at: " + d.toLocaleString();
+				document.getElementById("captured_at").innerText ="Captured at: " + d.toLocaleString() + ", By: " + username + " CC BY-SA";
 				
 			};
 			request.send();
