--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
 	clear:left;
 	background-color: #ddd;
 }
+h1 {
+	font-size: small;
+}
   </style>
 </head>
 <body>
 <!-- https://blog.katsubemakito.net/html5/camera1 -->
-<h1>Time travel Camera 0.2140</h1>
+<h1>Time travel Camera 0.0635</h1>
 
 <!-- https://otiai10.hatenablog.com/entry/2019/11/11/090124 -->
 <video id="camera" width="300" height="200" autoplay muted playsinline="true"></video>
@@ -30,7 +33,7 @@
 <form>
   <button type="button" id="shutter">Shoot!</button>
 </form>
-
+<p>Use iPhone, Safari, portrait style</p>
 <div id="attributions">
 <p>Attributions
 <ul>
@@ -39,6 +42,7 @@
 <li>Source code: <a href="https://blog.katsubemakito.net/html5/camera1">ねこの足跡R</a>
 </ul>
 </div>
+<p>Bub report at <a href="https://github.com/tankaru/kako-Camera">Github</a></p>
 <audio id="se" preload="auto">
   <source src="_sound_machine_mp3_camera-shutter1.mp3" type="audio/mp3">
 </audio>
