--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ h1 {
 </head>
 <body>
 <!-- https://blog.katsubemakito.net/html5/camera1 -->
-<h1>Time travel Camera 0.0635</h1>
+<h1>Time travel Camera 0.1732</h1>
 
 <!-- https://otiai10.hatenablog.com/entry/2019/11/11/090124 -->
 <video id="camera" width="300" height="200" autoplay muted playsinline="true"></video>
@@ -50,6 +50,12 @@ h1 {
 <script>
 
 const client_id = 'NEh3V0ZjaE1fT1Nkdk9jMnJlSGNQQToyNzlmZjQxM2U2MjBjMGUy';
+
+function look_at([lon, lat], heading){
+	
+	
+	return [look_at_lon, look_at_lat];
+}
 
 window.onload = () => {
   const video  = document.querySelector("#camera");
@@ -102,7 +108,7 @@ window.onload = () => {
 			const lon = position.coords.longitude;
 			const heading = position.coords.heading;
 			
-            const url = 'https://a.mapillary.com/v3/images?client_id=' + client_id + '&closeto=' + lon + ',' + lat + '&per_page=1&radius=100&pano=false';
+            const url = 'https://a.mapillary.com/v3/images?client_id=' + client_id + '&closeto=' + lon + ',' + lat + '&per_page=1&radius=20&pano=false';
 			
 			const request = new XMLHttpRequest();
 			request.open('GET', url, true);
