--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ h1 {
 <li>Source code: <a href="https://blog.katsubemakito.net/html5/camera1">ねこの足跡R</a>
 </ul>
 </div>
-<p>Bub report at <a href="https://github.com/tankaru/kako-Camera">Github</a></p>
+<p>Bug report at <a href="https://github.com/tankaru/kako-Camera">Github</a></p>
 <audio id="se" preload="auto">
   <source src="_sound_machine_mp3_camera-shutter1.mp3" type="audio/mp3">
 </audio>
