--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ h1 {
 </head>
 <body>
 <!-- https://blog.katsubemakito.net/html5/camera1 -->
-<h1>Time travel Camera 0.1955</h1>
+<h1>Time travel Camera 0.2139</h1>
 
 <!-- https://otiai10.hatenablog.com/entry/2019/11/11/090124 -->
 <video id="camera" width="300" height="200" autoplay muted playsinline="true"></video>
@@ -28,7 +28,7 @@ h1 {
 <!--
 <canvas id="picture" width="300" height="200"></canvas>
 -->
-<p><span id="mapillary"></span></p>
+<p><img id="mapillary" src="" width="300"></span></p>
 <p><span id="captured_at"></span></p>
 <form>
   <button type="button" id="shutter">Shoot!</button>
